public/css/custom.css
html, body {
    height: 100%;
}

body {
    padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
    background: linear-gradient( rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8) ), url('/img/background.jpg');
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
}

.footer ul {
    min-height: 100px;
}

.footer {
    position: relative;
    margin-top: -180px; /* negative value of footer height */
    height: 180px;
    clear: both;
}


#wrap {
    min-height: 100%;
    position: relative;
    /*z-index: 3;*/
}

#main {
    overflow: auto;
    padding-bottom: 150px; /* this needs to be bigger than footer height*/
}

.pushdown {
    margin-top: 15%;
}

.loader {
    border: 16px solid #375a7f; /* Light grey */
    border-top: 16px solid #3498db; /* Blue */
    border-radius: 50%;
    width: 80px;
    height: 80px;
    animation: spin 2s linear infinite;
    margin: auto;
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

.well-hover:default
{
    background-color: #ccc;
}
.well-hover:hover
{
    background-color: #f9f9f9;
}

.well-warning {
    background-color: #ffcc99;
}

.textright {
    position: relative;
    clear: right;
    float: right;
}
.floatright {
    margin: 0 0 .5em .5em;
    border: 0;
    position: relative;
    clear: right;
    float: right;
}

.pointer {
    cursor: pointer;
}

@media (max-width:767px) {
    .center-small {
        margin-bottom: 2em;
        text-align: center
    }
}

